added all files

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongodb": "^6.5.0",
