--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "incremental": true,
     "suppressImplicitAnyIndexErrors": true,
     "noImplicitAny": true,
+    "ignoreDeprecations": "5.0",
     "plugins": [
       {
         "name": "next"
